# Github-Profile-Fetcher

./: Dockerfile  README.md  pyproject.toml  run.sh
.github/workflows/: ruff.yml
backend/: main.py  requirements.txt
backend/core/: config.py  github.py
backend/models/: users.py
backend/utils/: __init__.py  github_fetcher.py
frontend/: index.html  script.js  style.css
